<resources>
    <string name="app_name">Bhatinder</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello World</string>
    <string name="logoDsc">App Logo</string>
    <string name="google_logo">Google login</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="btn_login">LOG IN</string>
    <string name="submit">SUBMIT</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="opt_addTask">Add task</string>
    <string name="opt_settings">Settings</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="tab_1_now">NOW</string>
    <string name="tab_2_assigned">ASSIGNED</string>
    <string name="tab_3_applied">APPLIED</string>
    <string name="nav_drawer_1">Profile</string>
    <string name="nav_drawer_2">Find Friends</string>
    <string name="nav_drawer_3">Settings</string>
    <string name="nav_drawer_4">Sign Out</string>
    <string name="chat_list_image">chat list profile image</string>
    <string name="opt_attach_file">Attachment</string>
    <string name="opt_call">Call</string>
    <string name="opt_delete">Remove</string>

    <string name="title_activity_register">Register</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="server_client_id">709468606987-u9sf5msvf4m5jgoeahnf7u7pib7k2ls1.apps.googleusercontent.com</string>
    <string name="clientSecret">_GyjN1syW0bwSfvCf_0GkoJp</string>
    <string name="clientId">709468606987-u9sf5msvf4m5jgoeahnf7u7pib7k2ls1.apps.googleusercontent.com</string>


</resources>
