<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <item
            android:id="@+id/opt_attachFile"
            android:icon="@drawable/ic_attach_file"
            android:title="@string/opt_attach_file"
            app:showAsAction="always"
    />

    <item
            android:id="@+id/opt_call"
            android:icon="@drawable/ic_call"
            android:title="@string/opt_call"
            app:showAsAction="ifRoom"
    />

    <item
            android:id="@+id/opt_settings"
            android:title="@string/opt_settings"
            app:showAsAction="never"
    />

    <item
            android:id="@+id/opt_delete"
            android:title="@string/opt_delete"
            app:showAsAction="never"
    />

</menu>