<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="test.lezwon.firstapp.MainActivity"
android:background="@drawable/bg"
android:orientation="vertical"
android:padding="2dp"
android:focusable="false"
android:animateLayoutChanges="true"
>


<ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:contentDescription="@string/logoDsc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@+id/imageView"
            android:weightSum="1"
            android:baselineAligned="false"
    >

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rectangle"
                android:layout_marginTop="10dp"
        >


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        android:weightSum="1"
            >

                    <RadioButton
                            android:id="@+id/btn_signup"
                            android:layout_weight=".5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_signup"
                            android:background="@drawable/states_buttons"
                            android:padding="15dp"
                            android:button="@android:color/transparent"
                            android:gravity="center"
                            android:textColor="@color/states_btn_text"
                            android:onClick="toggleForm"
                            android:checked="true"
                            android:minWidth="105dp"
                            android:layout_marginEnd="10dp"
                    />

                    <RadioButton
                            android:id="@+id/btn_login"
                            android:layout_weight=".5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_login"
                            android:background="@drawable/states_buttons"
                            android:padding="15dp"
                            android:button="@android:color/transparent"
                            android:onClick="toggleForm"
                            android:textColor="@color/states_btn_text"
                            android:gravity="center"
                            android:minWidth="105dp"
                    />

            </RadioGroup>

            <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">

                <!--Log In Form-->

                <LinearLayout
                        android:id="@+id/signIn_form"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/stroke"
                        android:padding="2dp"
                        android:visibility="gone"
                >
                    <EditText
                            android:id="@+id/signIn_email"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:minHeight="30dp"
                            android:inputType="textEmailAddress"
                            android:background="#c1ffffff"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:hint="@string/email_placeholder"
                            android:layout_gravity="center_horizontal"
                            android:textColorHint="#a6a6a6"
                            android:textSize="14sp"

                    />

                    <EditText
                            android:id="@+id/signIn_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:minHeight="30dp"
                            android:inputType="textPassword"
                            android:hint="@string/password_placeholder"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:layout_gravity="center"

                            android:background="#c1ffffff"
                            android:textColorHint="#a6a6a6"
                            android:textSize="14sp"

                    />

                    <Button android:id="@+id/signIn_submit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="40dp"
                            android:padding="5dp"
                            android:layout_gravity="center"
                            android:background="@color/VibrantRed"
                            android:stateListAnimator="@null"
                            android:text="@string/submit"
                            android:textColor="#fff"
                            android:textSize="16sp"
                    />
                </LinearLayout>

                <!--Sign Up Form-->

                <LinearLayout
                        android:id="@+id/signUp_form"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/stroke"
                        android:padding="2dp"
                        android:visibility="visible"
                >
                    <EditText
                            android:id="@+id/signUp_email"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:minHeight="30dp"
                            android:inputType="textEmailAddress"
                            android:background="#c1ffffff"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:hint="@string/email_placeholder"
                            android:layout_gravity="center_horizontal"
                            android:textColorHint="#a6a6a6"
                            android:textSize="14sp"

                    />

                    <EditText
                            android:id="@+id/signUp_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:minHeight="30dp"
                            android:inputType="textPassword"
                            android:hint="@string/password_placeholder"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:layout_gravity="center"
                            android:background="#c1ffffff"
                            android:textColorHint="#a6a6a6"
                            android:textSize="14sp"

                    />

                    <EditText
                            android:id="@+id/signUp_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:minHeight="30dp"
                            android:inputType="textPassword"
                            android:hint="@string/confirm_password_placeholder"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:layout_gravity="center"

                            android:background="#c1ffffff"
                            android:textColorHint="#a6a6a6"
                            android:textSize="14sp"

                    />

                    <Button android:id="@+id/signUp_submit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="40dp"
                            android:padding="5dp"
                            android:layout_gravity="center"
                            android:background="@color/VibrantRed"
                            android:stateListAnimator="@null"
                            android:text="@string/submit"
                            android:textColor="#fff"
                            android:textSize="16sp"
                    />
                </LinearLayout>
            </FrameLayout>

            <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_google" android:scaleType="fitCenter"
                    android:background="@drawable/login_google"
                    android:adjustViewBounds="true"
                    android:padding="1dp"
                    android:clickable="true"
                    android:contentDescription="@string/google_logo"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
            >

            </ImageButton>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
